--- a/SiGCT/Web.config
+++ b/SiGCT/Web.config
@@ -34,7 +34,8 @@
       <property name="hbm2ddl.auto">
         <!--validate | update | create | create-drop-->
         create
-      </property>
+      </property>      
+      <property name="query.imports">import.sql</property>
       <property name="generate_statistics">true</property>
       <mapping assembly="SiGCT.Data" />
     </session-factory>
