--- a/SiGCT/Web.Debug.config
+++ b/SiGCT/Web.Debug.config
@@ -14,6 +14,11 @@
         xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
     </connectionStrings>
   -->
+
+  <connectionStrings>
+    <add name="SqlServer" connectionString="Data Source=CHOI;Initial Catalog=Controle;Integrated Security=True;Connect Timeout=0" providerName="System.Data.SqlClient" xdt:Locator="Match(name)" xdt:Transform="Replace"/>
+  </connectionStrings>
+  
   <system.web>
     <!--
       In the example below, the "Replace" transform will replace the entire
