--- a/SiGCT/Web.config
+++ b/SiGCT/Web.config
@@ -8,6 +8,10 @@
     <section name="hibernate-configuration" type="NHibernate.Cfg.ConfigurationSectionHandler, NHibernate" />
     <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
   </configSections>
+
+  <connectionStrings>
+    <add name="SqlServer" connectionString="Data Source=CHOI;Initial Catalog=Controle;Integrated Security=True;Connect Timeout=0" providerName="System.Data.SqlClient" />
+  </connectionStrings>
   
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -19,11 +23,16 @@
   <!--  Configuração do Hibernate  -->
   <hibernate-configuration xmlns="urn:nhibernate-configuration-2.2">
     <session-factory>
+      <!--MSSQL-->
+      <property name="connection.driver_class">NHibernate.Driver.Sql2008ClientDriver</property>
+      <property name="connection.connection_string_name">SqlServer</property>
+      <property name="dialect">NHibernate.Dialect.MsSql2012Dialect</property>
+      <property name="connection.isolation">ReadCommitted</property>      
       <!--SQLite-->
-      <property name="connection.driver_class">NHibernate.Driver.SQLite20Driver</property>
+      <!--<property name="connection.driver_class">NHibernate.Driver.SQLite20Driver</property>
       <property name="connection.connection_string">Data Source=|DataDirectory|SiGCT.db;Version=3</property>
       <property name="dialect">NHibernate.Dialect.SQLiteDialect</property>
-      <property name="query.substitutions">true=1;false=0</property>
+      <property name="query.substitutions">true=1;false=0</property>-->
       <!--Fim SQLite-->
       <property name="query.substitutions">true 1, false 0, yes 'Y', no 'N'</property>
       <property name="command_timeout">60</property>
